--- a/frontend/about.html
+++ b/frontend/about.html
@@ -22,10 +22,9 @@
                     <li><a href="index.html">Home</a></li>
                     <li><a href="about.html">About</a></li>
                     <li><a href="resources.html">Resources</a></li>
-                    <li><a href="#mission">Our Mission</a></li>
-                    <li><a href="#roadmap">Roadmap</a></li>
+                    <li><a href="contact.html">Contact</a></li>
                     <li><a href="login.html">Login</a></li>
-                    <li><a href="index.html#community" class="nav-cta">Join Community</a></li>
+                    <li><a href="register.html" class="nav-cta">Join Community</a></li>
                 </ul>
                 <div class="hamburger" id="hamburger">
                     <span></span>
