--- a/frontend/eco-friendly.html
+++ b/frontend/eco-friendly.html
@@ -364,7 +364,8 @@
                 <ul class="nav-links">
                     <li><a href="index.html">Home</a></li>
                     <li><a href="about.html">About</a></li>
-                    <li><a href="index.html#categories">Categories</a></li>
+                    <li><a href="resources.html">Resources</a></li>
+                    <li><a href="contact.html">Contact</a></li>
                     <li><a href="login.html">Login</a></li>
                     <li><a href="register.html" class="nav-cta">Join Community</a></li>
                 </ul>
