--- a/frontend/forgot-password.html
+++ b/frontend/forgot-password.html
@@ -206,8 +206,9 @@
                 <ul class="nav-links">
                     <li><a href="index.html">Home</a></li>
                     <li><a href="about.html">About</a></li>
-                    <li><a href="index.html#categories">Categories</a></li>
-                    <li><a href="index.html#stories">Success Stories</a></li>
+                    <li><a href="resources.html">Resources</a></li>
+                    <li><a href="contact.html">Contact</a></li>
+                    <li><a href="login.html">Login</a></li>
                     <li><a href="register.html" class="nav-cta">Join Community</a></li>
                 </ul>
                 <div class="hamburger" id="hamburger">
