--- a/frontend/index.html
+++ b/frontend/index.html
@@ -17,14 +17,13 @@
     <header>
         <nav class="navbar">
             <div class="nav-container">
-                <h2 class="logo">🌸 EmpowerHer</h2>
+                <h2 class="logo"><a href="index.html">🌸 EmpowerHer</a></h2>
                 <ul class="nav-links">
                     <li><a href="index.html">Home</a></li>
                     <li><a href="about.html">About</a></li>
                     <li><a href="#categories">Categories</a></li>
                     <li><a href="resources.html">Resources</a></li>
-                    <li><a href="#why">Why Us</a></li>
-                    <li><a href="#stories">Success Stories</a></li>
+                    <li><a href="contact.html">Contact</a></li>
                     <li><a href="login.html">Login</a></li>
                     <li><a href="register.html" class="nav-cta">Join Community</a></li>
                 </ul>
@@ -33,6 +32,9 @@
                     <span></span>
                     <span></span>
                 </div>
+            </div>
+        </nav>
+    </header>
             </div>
         </nav>
     </header>
