--- a/frontend/register.html
+++ b/frontend/register.html
@@ -276,6 +276,7 @@
                     <li><a href="about.html">About</a></li>
                     <li><a href="resources.html">Resources</a></li>
                     <li><a href="contact.html">Contact</a></li>
+                    <li><a href="login.html">Login</a></li>
                     <li><a href="register.html" class="nav-cta">Join Community</a></li>
                 </ul>
                 <div class="hamburger" id="hamburger">
